r284 (19. 12. 2024):
Added support for mod "Hostages Extend Break Time"

r283 (16. 12. 2024):
Converts Tracker: Fixed misaligned convert health text
Converts Tracker: Fixed misaligned tracker that overlap with other trackers if tracker alignment is set to "Horizontal; Right to Left"
Converts Tracker: Fixed misaligned tracker description is some cases
Loot Counter: Fixed an issue where the tracker is not visible in endless heists (client only)
Menu: Fixed visual issues in the tracker preview

r282 (10. 12. 2024):
Branchbank: Deposit: Fixed an issue in Loot Counter when variable unknown loot is visible when they do not spawn
Fixed a spam message in VR that the game version is not compatible

r281 (07. 12. 2024):
Fixed an issue where synced loot bags from host are not properly colored based on their weight

r280 (05. 12. 2024):
Fixed a crash when a deployable is enabled

r279 (03. 12. 2024):
Added option "Show Bag Outline color based on their weight"
Escape: Cafe: Fixed an issue where Assault tracker is not working correctly

r278 (29. 11. 2024):
Disabled Beardlib fix on vanilla levels to prevent crashes

r277 (28. 11. 2024):
Fixed a silent load crash in custom heists added by Beardlib

r276 (24. 11. 2024):
Added options "Show Number of Enemies in Assault Trackers", "Floating Health Bar Style" and "Show Floating Health Bars for Team AI"

r275 (17. 11. 2024):
Optimization in option "Show Convert's Health in Tracker"
Fixed missing decimals in uses for ammo bags
Captain Chance Tracker: Made the tracker accurate in Crime Spree with Assault Extender modifier active
Heat Street: Fixed stuck failed achievement tracker "Patience is Key"
The Bomb: Dockyard: Fixed an issue where delay to the first assault is not visible after alarm

r274 (16. 11. 2024):
Hostile Takeover: Fixed a crash in achievement tracker "Texas Treasures, Part 3"

r273 (10. 11. 2024):
Added option "Show Convert's Health in Tracker"
Fixed Turret icon