@@ -9,11 +9,11 @@ end
 ---@field _owner_id number
 ---@field _position Vector3
 ---@field _unit UnitECM
+---@field battery_life_multiplier number[]
 ---@field battery_life fun(self: self): number
 ---@field owner fun(self: self): UnitPlayer
 
 local show_waypoint, show_waypoint_only = EHI:GetWaypointOptionWithOnly("show_waypoints_ecmjammer")
-local WWaypoint = EHI.Waypoints.Warning
 
 local original =
 {
@@ -33,7 +33,16 @@ local original =
 function ECMJammerBase.spawn(pos, rot, battery_life_upgrade_lvl, owner, peer_id, ...)
     local unit = original.spawn(pos, rot, battery_life_upgrade_lvl, owner, peer_id, ...)
     unit:base():SetPeerID(peer_id)
-	return unit
+    if not show_waypoint_only and managers.ehi_tracker:CallFunction2("ECMFeedbackRetrigger", "AddUnit") then
+        managers.ehi_tracker:PreloadTracker({
+            id = "ECMFeedbackRetrigger",
+            icons = { "ecm_feedback", "restarter" },
+            hint = "ecm_feedback_refresh",
+            unit = true,
+            class = "EHIECMFeedbackRefreshTracker"
+        })
+    end
+    return unit
 end
 
 ---@param peer_id number
@@ -52,6 +61,15 @@ function ECMJammerBase:set_owner(...)
     self:SetPeerID(self._owner_id or 0)
     managers.ehi_tracker:CallFunction("ECMJammer", "UpdateOwnerID", self._ehi_peer_id)
     managers.ehi_tracker:CallFunction("ECMFeedback", "UpdateOwnerID", self._ehi_peer_id)
+    if not show_waypoint_only and managers.ehi_tracker:CallFunction2("ECMFeedbackRetrigger", "AddUnit") then
+        managers.ehi_tracker:PreloadTracker({
+            id = "ECMFeedbackRetrigger",
+            icons = { "ecm_feedback", "restarter" },
+            hint = "ecm_feedback_refresh",
+            unit = true,
+            class = "EHIECMFeedbackRefreshTracker"
+        })
+    end
 end
 
 ---@param peer_id number
@@ -61,7 +79,7 @@ function ECMJammerBase:SetPeerID(peer_id)
     self._ehi_local_peer = id == managers.network:session():local_peer():id()
 end
 
-function ECMJammerBase:GetECMPosition()
+function ECMJammerBase:GetPosition()
     local body = self._unit:get_object(Idstring("g_ecm"))
     return body and body:position() or self._position
 end
@@ -75,8 +93,7 @@ if EHI:GetOption("show_equipment_ecmjammer") then
             local battery_life = self:battery_life()
             if battery_life <= 0 then
                 return
-            end
-            if BlockECMsWithoutPagerBlocking then
+            elseif BlockECMsWithoutPagerBlocking then
                 if self._ehi_local_peer and not managers.player:has_category_upgrade("ecm_jammer", "affects_pagers") then
                     return
                 elseif self._ehi_peer_id ~= 0 then
@@ -102,8 +119,8 @@ if EHI:GetOption("show_equipment_ecmjammer") then
                 managers.ehi_waypoint:AddWaypoint(tostring(self._unit:key()), {
                     time = battery_life,
                     icon = "ecm_jammer",
-                    position = self:GetECMPosition(),
-                    class = WWaypoint
+                    position = self:GetPosition(),
+                    class = EHI.Waypoints.Warning
                 })
             end
         end
@@ -126,34 +143,30 @@ if EHI:GetOption("show_equipment_ecmfeedback") then
 end
 
 if EHI:GetOption("show_ecmfeedback_refresh") then
+    if not show_waypoint_only then
+        EHI:LoadTracker("EHIECMFeedbackRefreshTracker")
+    end
     Hooks:PostHook(ECMJammerBase, "_set_feedback_active", "EHI_ECMJammerBase_set_feedback_active_false", function(self, state) ---@param state boolean
         if not state and not self.__ehi_destroying then
             if alive(self._owner) then
                 local retrigger = false
-				if self._ehi_local_peer then
-					retrigger = managers.player:has_category_upgrade("ecm_jammer", "can_retrigger")
-				else
-					retrigger = self:owner():base():upgrade_value("ecm_jammer", "can_retrigger")
-				end
-				if retrigger then
-                    local key = "ECMFeedbackRetrigger_" .. tostring(self._unit:key())
+                if self._ehi_local_peer then
+                    retrigger = managers.player:has_category_upgrade("ecm_jammer", "can_retrigger")
+                else
+                    retrigger = self:owner():base():upgrade_value("ecm_jammer", "can_retrigger")
+                end
+                if retrigger then
                     local retrigger_t = tweak_data.upgrades.ecm_feedback_retrigger_interval or 60
-                    if not show_waypoint_only then
-                        managers.ehi_tracker:AddTracker({
-                            id = key,
-                            time = retrigger_t,
-                            icons = { { icon = "ecm_feedback", color = EHI:GetPeerColorByPeerID(self._ehi_peer_id) }, "restarter" },
-                            hint = "ecm_feedback_refresh"
-                        })
-                    end
+                    local key = tostring(self._unit:key())
+                    managers.ehi_tracker:RunTracker("ECMFeedbackRetrigger", { id = key, time = retrigger_t, peer_id = self._ehi_peer_id })
                     if show_waypoint then
                         managers.ehi_waypoint:AddWaypoint(key, {
                             time = retrigger_t,
                             icon = "restarter",
-                            position = self:GetECMPosition()
+                            position = self:GetPosition()
                         })
                     end
-				end
+                end
             end
         end
     end)
@@ -162,8 +175,9 @@ end
 function ECMJammerBase:destroy(...)
     self.__ehi_destroying = true
     original.destroy(self, ...)
+    local key = tostring(self._unit:key())
     managers.ehi_tracker:CallFunction("ECMJammer", "Destroyed", self._unit)
     managers.ehi_tracker:CallFunction("ECMFeedback", "Destroyed", self._unit)
-    managers.ehi_waypoint:RemoveWaypoint(tostring(self._unit:key()))
-    managers.ehi_manager:Remove("ECMFeedbackRetrigger_" .. tostring(self._unit:key()))
+    managers.ehi_waypoint:RemoveWaypoint(key)
+    managers.ehi_manager:RemoveUnit("ECMFeedbackRetrigger", key, true)
 end
